@@ -25,6 +25,7 @@ python-reahl (4.0.0a1) unstable; urgency=low
  * Changed the way one specifies offsets for columns - to be part of the ColumnOption and not part of ResponsiveSize.
  * Added support for not showing gutters between ColumnLayout columns.
  * Added support for alignment and justification of ColumnLayout columns.
+ * Changed how RadioButtonInput and CheckboxInput are laid out as inline/not.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 12 Jun 2016 08:47:00 +0200
 
